feat: add checkpoints and gochecks, remove teleports (#2)